quiz homepage created and coded, minor touch ups to header/footer/index.css

--- a/client/styles/header.css
+++ b/client/styles/header.css
@@ -8,9 +8,9 @@ header {
     margin: 0 auto;
 }
 
-.placeholder {
-    width: 56px;
-    height: 56px;
+.logo {
+    width: 175px;
+    height: 100px;
     object-fit: cover;
 }
 
